--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [
 dynamic = ["version"]
 requires-python = ">=3.8"
 dependencies = [
+    "pyserial >=3,<4",
 ]
 
 [project.optional-dependencies]
@@ -27,6 +28,7 @@ dev = [
     "ruff >=0.11.0,<0.12",
     "mypy==1.9.0",
     "build",
+    "types-pyserial >=3,<4",
 ]
 
 [project.scripts]
