--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dynamic = ["version"]
 requires-python = ">=3.8"
 dependencies = [
     "pyserial >=3,<4",
+    "avrdude-windows ==7.1.0; sys_platform == 'win32'",
 ]
 
 [project.optional-dependencies]
