--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ requires-python = ">=3.8"
 dependencies = [
     "pyserial >=3,<4",
     "avrdude-windows ==7.1.0; sys_platform == 'win32'",
+    "april_vision >=3,<4",
+    "opencv-python >=4.10,<5",
 ]
 
 [project.optional-dependencies]
