--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -80,6 +80,6 @@ jobs:
         artifacts: |
           dist/*
         draft: true
-        generateReleaseNotes: true
+        omitDraftDuringUpdate: true
         omitBodyDuringUpdate: true
         omitNameDuringUpdate: true
