Use a version of sr.tools that works And avoids the numpy version conflict

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dev = [
     "types-pyserial >=3,<4",
 ]
 inv = [
-    "sr.tools ==1.2.0"
+    "sr.tools @git+https://github.com/srobo/tools.git@minimal"
 ]
 
 [project.scripts]
