--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -43,7 +43,7 @@ jobs:
   build:
     permissions:
       contents: write  # Needed for creating releases
-      # id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     runs-on: ubuntu-latest
     needs: test
     steps:
