Include optional dependencies for manipulating the inventory

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ dev = [
     "build",
     "types-pyserial >=3,<4",
 ]
+inv = [
+    "sr.tools ==2.0.0a1"
+]
 
 [project.scripts]
 kit_test = "kit_test.cli:main"
