--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install .[dev]
+        python -m pip install .[dev,inv]
     - name: Lint
       run: |
         poe lint
